fixed calendar nav and div spacing issues

--- a/src/App.css
+++ b/src/App.css
@@ -111,6 +111,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: space-evenly;
+    /* overflow: hidden; */
 }
 
 .canvas-circle{
@@ -201,7 +202,9 @@
     border-radius: 20px;
     font-weight: 800;
     font-size: 16px;
-    margin-bottom: 40px;
+    margin-bottom: 5px;
+    /* margin-bottom: 40px; */
+    
 }
 .clear-button-styling{
     background: #FDB573;
@@ -213,7 +216,8 @@
     font-weight: 800;
     font-size: 10px;
     color: #fff;
-    margin: 15px;
+    /* margin: 15px; */
+    margin: 5px
 }
 .signin-button-styling{
     color: #FDB573;
@@ -289,7 +293,7 @@
     justify-self: center;
 }
 .calendar-layout h2{
-    padding-left: 28px;
+    /* padding-left: 28px; */
     width: 90%;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-style: normal;
@@ -300,6 +304,7 @@
     align-self: center;
     justify-self: center;
     max-width: 500px; 
+    margin: 0;
 }
 .modal-text{
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -340,5 +345,32 @@
     width: 250px;
     height: 250px;
     margin-top: 30px;
+}
+
+.date-utils{
+    display: flex;
+    width: 80%;
+    max-width: 375px;
+    /* justify-content: space-betw; */
+}
+.date-control{
+    display: flex;
+}
+.date-control h1{
+    margin: 0;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: bold;
+}
+.prev{
+    padding-right: 5px;
+}
+.next{
+    padding-left: 5px;
+}
+.prev:hover{
+    cursor: pointer;
+}
+.next:hover{
+    cursor: pointer;
 }
 
